Created game project
Added LeapEngine class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,8 @@ Project(Leap VERSION 1.0.0)
 
 add_subdirectory(LeapEngine)
 message("Include dir: ${LeapEngineIncludeDir}")
+
+add_subdirectory(UnnamedAdventureGame)
+target_include_directories(UnnamedAdventureGame PUBLIC ${LeapEngineIncludeDir})
+
+target_link_libraries(UnnamedAdventureGame PUBLIC LeapEngine)
