--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,18 @@ Project(Leap VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+    # 64-bit platform (x64)
+	message("Building for x64")
+	set(GLFW_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/GLFW/x64/include")
+	set(GLFW_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/GLFW/x64/lib/glfw3.lib")
+else()
+    # 32-bit platform (x86)
+	message("Building for x86")
+	set(GLFW_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/GLFW/x86/include")
+	set(GLFW_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/GLFW/x86/lib/glfw3.lib")
+endif()
+
 add_subdirectory(Physics)
 message("Include dir: ${PhysicsEngineIncludeDir}")
 
