Created utils library
Added Command, Observer, Singleton and Subject
Removed Command from InputManager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,32 +60,37 @@ message("Include dir: ${PHYSX_INCLUDE_DIR}")
 add_subdirectory(3rdParty/GLM)
 message("Include dir: ${GLMIncludeDir}")
 
+# Utils
+add_subdirectory(Utils)
+message("Include dir: ${EngineUtilsIncludeDir}")
+
 # Physics Engine
 add_subdirectory(Physics)
 message("Include dir: ${PhysicsEngineIncludeDir}")
-target_include_directories(PhysicsEngine PUBLIC ${GLMIncludeDir} ${PHYSX_INCLUDE_DIR})
+target_include_directories(PhysicsEngine PUBLIC ${GLMIncludeDir} ${PHYSX_INCLUDE_DIR} ${EngineUtilsIncludeDir})
 target_link_libraries(PhysicsEngine PUBLIC ${PHYSX_LIBRARY_DIR} ${PHYSX_COMMON_LIBRARY_DIR} ${PHYSX_COOKING_LIBRARY_DIR} ${PHYSX_FOUNDATION_LIBRARY_DIR})
 
 # Graphics Engine
 add_subdirectory(Graphics)
 message("Include dir: ${GraphicsEngineIncludeDir}")
-target_include_directories(GraphicsEngine PUBLIC ${GLFW_INCLUDE_DIR} ${GLMIncludeDir} ${VULKAN_INCLUDE_DIR})
+target_include_directories(GraphicsEngine PUBLIC ${GLFW_INCLUDE_DIR} ${GLMIncludeDir} ${VULKAN_INCLUDE_DIR} ${EngineUtilsIncludeDir})
 target_link_libraries(GraphicsEngine PUBLIC ${GLFW_LIBRARY_DIR} ${VULKAN_LIBRARY_DIR} OpenGL::GL)
 
 # Input Engine
 add_subdirectory(Inputs)
 message("Include dir: ${InputEngineIncludeDir}")
-target_include_directories(InputEngine PUBLIC ${GLFW_INCLUDE_DIR} ${GLMIncludeDir})
+target_include_directories(InputEngine PUBLIC ${GLFW_INCLUDE_DIR} ${GLMIncludeDir} ${EngineUtilsIncludeDir})
 target_link_libraries(InputEngine PUBLIC ${GLFW_LIBRARY_DIR} OpenGL::GL)
 
 # Audio Engine
 add_subdirectory(Audio)
 message("Include dir: ${AudioEngineIncludeDir}")
-target_include_directories(AudioEngine PUBLIC ${GLMIncludeDir} ${FMOD_INCLUDE_DIR})
+target_include_directories(AudioEngine PUBLIC ${GLMIncludeDir} ${FMOD_INCLUDE_DIR} ${EngineUtilsIncludeDir})
 target_link_libraries(AudioEngine PUBLIC ${FMOD_LIBRARY_DIR})
 
 # Networking Engine
 add_subdirectory(Networking)
+target_include_directories(NetworkingEngine PUBLIC ${EngineUtilsIncludeDir})
 message("Include dir: ${NetworkingEngineIncludeDir}")
 
 # Main Engine
@@ -99,7 +104,8 @@ target_include_directories(
 	${AudioEngineIncludeDir}
 	${NetworkingEngineIncludeDir}
 	${GLFW_INCLUDE_DIR}
-	${GLMIncludeDir})
+	${GLMIncludeDir} 
+	${EngineUtilsIncludeDir})
 target_link_libraries(
 	LeapEngine PUBLIC 
 	PhysicsEngine
