--- a/Inputs/CMakeLists.txt
+++ b/Inputs/CMakeLists.txt
@@ -1,4 +1,4 @@
 #Input engine cmake
-add_library(InputEngine "InputManager.h" "InputManager.cpp" "InputManagerGLFW3.h" "InputManagerGLFW3.cpp")
+add_library(InputEngine "InputManager.h" "InputManager.cpp")
 
 set(InputEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
