--- a/LeapEngine/CMakeLists.txt
+++ b/LeapEngine/CMakeLists.txt
@@ -1,4 +1,4 @@
 #Leap engine library
-add_library(LeapEngine "Leap.h" "Leap.cpp" "ServiceLocator.h" "ServiceLocator.cpp"  )
+add_library(LeapEngine "Leap.h" "Leap.cpp")
 
 set(LeapEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
