--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,14 +15,13 @@ endif()
 # OpenGL
 find_package(OpenGL REQUIRED)
 
+# Vulkan
+find_package(Vulkan REQUIRED)
+
 # GLFW include paths
 set(GLFW_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/GLFW/include")
 set(GLFW_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/GLFW/lib/glfw3.lib")
 message("Include dir: ${GLFW_INCLUDE_DIR} with ${GLFW_LIBRARY_DIR}")
-
-# Vulkan include paths
-set(VULKAN_LIBRARY_DIR "${CMAKE_SOURCE_DIR}/3rdParty/Vulkan/Lib/vulkan-1.lib")
-set(VULKAN_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/3rdParty/Vulkan/Include")
 
 # FMOD
 set(FMOD_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/FMOD/include")
@@ -83,11 +82,15 @@ target_include_directories(
 	GraphicsEngine PUBLIC 
 	${GLFW_INCLUDE_DIR}
 	${GLMIncludeDir}
-	${VULKAN_INCLUDE_DIR}
 	${EngineUtilsIncludeDir}
 	${VkBootstrapIncludeDir}
 )
-target_link_libraries(GraphicsEngine PUBLIC ${GLFW_LIBRARY_DIR} ${VULKAN_LIBRARY_DIR} OpenGL::GL)
+target_link_libraries(
+	GraphicsEngine PUBLIC 
+	${GLFW_LIBRARY_DIR} 
+	Vulkan::Vulkan 
+	OpenGL::GL
+)
 
 # Input Engine
 add_subdirectory(Inputs)
