Added basic Vertex and Mesh struct
Added a basic Vertex and Mesh struct to represent a mesh. Used in Pipeline Layout and Push Constants.

Added a basic rotating triangle using push constants to rotate it.

--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -4,6 +4,10 @@ find_package(Vulkan REQUIRED)
 add_library(VMA INTERFACE)
 target_include_directories(VMA INTERFACE VMA)
 
+if (MSVC)
+    target_compile_options(VMA INTERFACE /w)
+endif()
+
 #GLM
 add_library(GLM INTERFACE)
 target_include_directories(GLM INTERFACE GLM)
