Added tinyobjloader and Utah teapot
Added tinyobjloader library to load obj files.

Loaded and added the Utah teapot.

--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -22,3 +22,13 @@ target_sources(
 
 target_include_directories(VkBootstrap PUBLIC VkBootstrap)
 target_link_libraries(VkBootstrap PUBLIC Vulkan::Vulkan)
+
+# TinyObjLoader
+add_library(tinyobjloader STATIC)
+target_sources(
+	tinyobjloader PRIVATE
+	tinyobjloader/tiny_obj_loader.h
+	tinyobjloader/tiny_obj_loader.cc
+)
+
+target_include_directories(tinyobjloader PUBLIC tinyobjloader)
