--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
     - name: Setup Vulkan SDK
-      uses: humbletim/setup-vulkan-sdk@v1.2.0
+    - uses: humbletim/setup-vulkan-sdk@v1.2.0
 
     - uses: actions/checkout@v3
 
