--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,9 +22,9 @@ jobs:
         BUILD_PLATFORM: [x64]
 
     steps:
-    - name: Setup Vulkan SDK
-      uses: humbletim/setup-vulkan-sdk@v1.2.0
-    
+    - name: Install Vulkan SDK
+      uses: humbletim/install-vulkan-sdk@v1.1.1
+      
     - uses: actions/checkout@v3
 
     - name: Configure CMake
