Added mesh renderer that draws triangle
Fixed graphics engine only using the release version of DirectXTex and DirectXEffect
Added IMeshRenderer and IMaterial interfaces for compability with other frameworks
Added DirectXMeshRenderer and DirectXMaterial as DirectX11 versions of the interfaces
Fixed fov calculation in Camera class
Added MeshRenderer component
Added simple Pos3D shader

--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -1,13 +1,22 @@
 #Graphics engine cmake
-add_library(GraphicsEngine STATIC Renderer.h Renderer.cpp Vulkan/VulkanTypes.h Vulkan/VulkanInitializers.h Vulkan/VulkanInitializers.cpp Vulkan/VulkanEngine.h Vulkan/VulkanEngine.cpp Vulkan/VkBootstrap.h Vulkan/VkBootstrap.cpp DirectX/DirectXEngine.cpp Interfaces/IRenderer.h Camera.h Camera.cpp)
+add_library(GraphicsEngine STATIC Renderer.h Renderer.cpp Vulkan/VulkanTypes.h Vulkan/VulkanInitializers.h Vulkan/VulkanInitializers.cpp Vulkan/VulkanEngine.h Vulkan/VulkanEngine.cpp Vulkan/VkBootstrap.h Vulkan/VkBootstrap.cpp DirectX/DirectXEngine.cpp Interfaces/IRenderer.h Camera.h Camera.cpp  "DirectX/DirectXMeshRenderer.cpp" "DirectX/DirectXMaterial.cpp" "Data/Vertex.h" "Interfaces/IMaterial.h")
 
 # DirectXTex
 set(DIRECTX_TEX_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/DirectXTex/include")
-set(DIRECTX_TEX_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/DirectXTex/lib/release/DirectXTex.lib")
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+	set(DIRECTX_TEX_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/DirectXTex/lib/debug/DirectXTex.lib")
+else()
+	set(DIRECTX_TEX_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/DirectXTex/lib/release/DirectXTex.lib")
+endif()
 
 # FX11
 set(FX11_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/FX11/include")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+set(FX11_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/FX11/lib/debug/Effects11.lib")
+else()
 set(FX11_LIBRARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/FX11/lib/release/Effects11.lib")
+endif()
 
 set(GraphicsEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
 
