Added customizability of the inputlayout of a material
Added Shader struct which holds path and vertex data of a directX shader, needs to be extended to also include vulkan data
Added ShaderDelete as a custom deleter for a unique ptr. This way none of the user classes or directX classes need to know about the inner working of the shader struct (aka an include to the shader struct)
Added DirectXShaderReader, a class that DOES include the shader and only returns the directX data
Added Pos3D shader

--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -1,5 +1,5 @@
 #Graphics engine cmake
-add_library(GraphicsEngine STATIC Renderer.h Renderer.cpp Vulkan/VulkanTypes.h Vulkan/VulkanInitializers.h Vulkan/VulkanInitializers.cpp Vulkan/VulkanEngine.h Vulkan/VulkanEngine.cpp Vulkan/VkBootstrap.h Vulkan/VkBootstrap.cpp DirectX/DirectXEngine.cpp Interfaces/IRenderer.h Camera.h Camera.cpp  "DirectX/DirectXMeshRenderer.cpp" "DirectX/DirectXMaterial.cpp" "Data/Vertex.h" "Interfaces/IMaterial.h")
+add_library(GraphicsEngine STATIC Renderer.h Renderer.cpp Vulkan/VulkanTypes.h Vulkan/VulkanInitializers.h Vulkan/VulkanInitializers.cpp Vulkan/VulkanEngine.h Vulkan/VulkanEngine.cpp Vulkan/VkBootstrap.h Vulkan/VkBootstrap.cpp DirectX/DirectXEngine.cpp Interfaces/IRenderer.h  Camera.h Camera.cpp  "DirectX/DirectXMeshRenderer.cpp" "DirectX/DirectXMaterial.cpp" "Data/Vertex.h" "Interfaces/IMaterial.h" "Shader.h" "Shader.cpp" "Shaders/Pos3D.cpp" "DirectX/DirectXShaderReader.h" "DirectX/DirectXShaderReader.cpp" "ShaderDelete.cpp")
 
 # DirectXTex
 set(DIRECTX_TEX_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/DirectXTex/include")
