Mouse is now a class is no longer done in InputManager itself

--- a/Inputs/CMakeLists.txt
+++ b/Inputs/CMakeLists.txt
@@ -1,4 +1,4 @@
 #Input engine cmake
-add_library(InputEngine "InputManager.h" "InputManager.cpp")
+add_library(InputEngine "InputManager.h" "InputManager.cpp" "Mouse.h" "Mouse.cpp")
 
 set(InputEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
