--- a/LeapEngine/CMakeLists.txt
+++ b/LeapEngine/CMakeLists.txt
@@ -18,6 +18,16 @@ add_library(LeapEngine
     "SceneGraph/Scene.cpp"
     "SceneGraph/SceneManager.h"
     "SceneGraph/SceneManager.cpp"
- "Components/RenderComponents/CameraComponent.h" "Components/RenderComponents/CameraComponent.cpp" "Components/RenderComponents/MeshRenderer.h" "Components/RenderComponents/MeshRenderer.cpp" "Components/RenderComponents/DirectionalLightComponent.cpp" "GameContext/Window.h" "GameContext/Window.cpp" "Components/RenderComponents/SpriteRendererComponent.h" "Components/RenderComponents/SpriteRendererComponent.cpp")
+    "Components/RenderComponents/CameraComponent.h" 
+    "Components/RenderComponents/CameraComponent.cpp" 
+    "Components/RenderComponents/MeshRenderer.h" 
+    "Components/RenderComponents/MeshRenderer.cpp" 
+    "Components/RenderComponents/DirectionalLightComponent.cpp" 
+    "GameContext/Window.h" 
+    "GameContext/Window.cpp" 
+    "Components/RenderComponents/SpriteRendererComponent.h" 
+    "Components/RenderComponents/SpriteRendererComponent.cpp"
+    "Components/RenderComponents/UIComponents/CanvasComponent.h"
+    "Components/RenderComponents/UIComponents/CanvasComponent.cpp" "Components/RenderComponents/UIComponents/CanvasElement.h" "Components/RenderComponents/UIComponents/CanvasElement.cpp")
 
 set(LeapEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
