--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Utils cmake
 
-add_library(EngineUtils INTERFACE)
+add_library(EngineUtils "Debug.cpp")
 
 set(EngineUtilsIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
