--- a/LeapEngine/CMakeLists.txt
+++ b/LeapEngine/CMakeLists.txt
@@ -35,6 +35,10 @@ add_library(LeapEngine
     "Components/RenderComponents/UIComponents/CanvasActions.cpp" 
     "Components/RenderComponents/UIComponents/Button.h" 
     "Components/RenderComponents/UIComponents/Button.cpp" 
-    "Components/RenderComponents/UIComponents/ICanvasElement.h")
+    "Components/RenderComponents/UIComponents/ICanvasElement.h"
+    "GameContext/ImGuiLogger.h"
+    "GameContext/ImGuiLogger.cpp"
+    "GameContext/ConsoleLogger.h"
+    "GameContext/ConsoleLogger.cpp")
 
 set(LeapEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
