Added AudioClip, AudioSource and AudioListener
Added IAudioClip interface with FmodAudioClip as a derived version of the interface
Added clip loading and playing to the IAudioSystem and FmodAudioSystem
Added AudioSource component
Added AudioListener component
Renamed Systems folder to FMOD

--- a/Audio/CMakeLists.txt
+++ b/Audio/CMakeLists.txt
@@ -1,4 +1,12 @@
 #Audio engine cmake
-add_library(AudioEngine "Interfaces/AudioSystem.h"  "HelperObjects/SoundData3D.h" "Systems/FmodAudioSystem.h" "Systems/FmodAudioSystem.cpp" "HelperObjects/ChannelData.h")
+add_library(AudioEngine 
+	"Interfaces/IAudioSystem.h"  
+	"HelperObjects/SoundData3D.h" 
+	"FMOD/FmodAudioSystem.h" 
+	"FMOD/FmodAudioSystem.cpp" 
+	"HelperObjects/ChannelData.h" 
+	"Interfaces/IAudioClip.h" 
+	"FMOD/FmodAudioClip.h"
+	"FMOD/FmodAudioClip.cpp")
 
 set(AudioEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
