--- a/LeapEngine/CMakeLists.txt
+++ b/LeapEngine/CMakeLists.txt
@@ -35,6 +35,10 @@ add_library(LeapEngine
     "Components/RenderComponents/UIComponents/CanvasActions.cpp" 
     "Components/RenderComponents/UIComponents/Button.h" 
     "Components/RenderComponents/UIComponents/Button.cpp" 
-    "Components/RenderComponents/UIComponents/ICanvasElement.h" "Components/Audio/AudioSource.h" "Components/Audio/AudioSource.cpp" "Components/Audio/AudioListener.h" "Components/Audio/AudioListener.cpp")
+    "Components/RenderComponents/UIComponents/ICanvasElement.h" 
+    "Components/Audio/AudioSource.h" 
+    "Components/Audio/AudioSource.cpp" 
+    "Components/Audio/AudioListener.h" 
+    "Components/Audio/AudioListener.cpp")
 
 set(LeapEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
