Added error mesh and MaterialNotFound material
A mesh that spells the letters "ERR" is now rendered for a mesh that isn't loaded or isn't loaded correctly (changed logic in DirectXMeshRenderer)
Added error.obj (the "ERR" mesh that is exactly 1x1x1 in size)
Added DirectXDefaults singleton who keeps track of error materials and meshes, it doesn't create the material or mesh unless they are needed
Added reload call to the DirectXDefaults class in the DirectXEngine

--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -44,7 +44,9 @@ add_library(GraphicsEngine STATIC
 "Data/SpriteVertex.h"
 "Data/Sprite.h"
 "Shaders/Sprites.h"
-"Shaders/Sprites.cpp")
+"Shaders/Sprites.cpp" 
+"DirectX/DirectXDefaults.h" 
+"DirectX/DirectXDefaults.cpp")
 
 # DirectXTex
 set(DIRECTX_TEX_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/DirectXTex/include")
