--- a/Networking/CMakeLists.txt
+++ b/Networking/CMakeLists.txt
@@ -1,4 +1,4 @@
 #Networking engine cmake
-add_library(NetworkingEngine Client.h Client.cpp)
+add_library(NetworkingEngine STATIC Client.h Client.cpp)
 
 set(NetworkingEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
