--- a/Physics/CMakeLists.txt
+++ b/Physics/CMakeLists.txt
@@ -1,4 +1,4 @@
 #Physics engine cmake
-add_library(PhysicsEngine Physics.h Physics.cpp)
+add_library(PhysicsEngine STATIC Physics.h Physics.cpp)
 
 set(PhysicsEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
