Added terrain component that can read height texture
Added SetFarPlane, SetNearPlane, GetFarPlane and GetNearPlane methods to the Camera class
Added empty texture creation support to the directX engine
Added Heightmap shader (Heightmap shader class + .fx file)
Added TerrainComponent

--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -46,7 +46,7 @@ add_library(GraphicsEngine STATIC
 "Shaders/Sprites.h"
 "Shaders/Sprites.cpp" 
 "DirectX/DirectXDefaults.h" 
-"DirectX/DirectXDefaults.cpp")
+"DirectX/DirectXDefaults.cpp" "Shaders/Heightmap.h" "Shaders/Heightmap.cpp" )
 
 # DirectXTex
 set(DIRECTX_TEX_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../3rdParty/DirectXTex/include")
