--- a/Inputs/CMakeLists.txt
+++ b/Inputs/CMakeLists.txt
@@ -1,4 +1,15 @@
 #Input engine cmake
-add_library(InputEngine STATIC "InputManager.h" "InputManager.cpp" "Mouse.h" "Mouse.cpp" "Keyboard.h" "Keyboard.cpp")
+add_library(InputEngine STATIC
+"InputManager.h"
+"InputManager.cpp"
+"Mouse.h"
+"Mouse.cpp"
+"Keyboard.h"
+"Keyboard.cpp")
+
+target_include_directories(InputEngine PUBLIC ${GLFW_INCLUDE_DIR} ${GLMIncludeDir} ${EngineUtilsIncludeDir})
+target_link_libraries(InputEngine PRIVATE ${GLFW_LIBRARY_DIR})
+target_link_libraries(InputEngine PUBLIC EngineUtils)
 
 set(InputEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
+message("Include dir: ${InputEngineIncludeDir}")
