--- a/UnnamedAdventureGame/CMakeLists.txt
+++ b/UnnamedAdventureGame/CMakeLists.txt
@@ -2,6 +2,27 @@
 
 add_executable(UnnamedAdventureGame main.cpp "Scenes/MainMenuScene.cpp" "Components/Transformator.h" "Components/Transformator.cpp" "Components/InfoUI.cpp" "Components/InfoUI.h" "Components/FreeCamMovement.h" "Components/FreeCamMovement.cpp" "Components/WindowManager.cpp" "Components/WindowManager.h" "Components/AudioTester.h" "Components/AudioTester.cpp")
 
+target_include_directories(
+	LeapEngine PUBLIC 
+	${PhysicsEngineIncludeDir} 
+	${GraphicsEngineIncludeDir}
+	${InputEngineIncludeDir}
+	${AudioEngineIncludeDir}
+	${NetworkingEngineIncludeDir}
+	${GLFW_INCLUDE_DIR}
+	${GLMIncludeDir} 
+	${EngineUtilsIncludeDir})
+target_link_libraries(
+	LeapEngine PUBLIC 
+	PhysicsEngine
+	GraphicsEngine
+	InputEngine
+	AudioEngine
+	NetworkingEngine
+	EngineUtils)
+target_include_directories(UnnamedAdventureGame PUBLIC ${LeapEngineIncludeDir})
+target_link_libraries(UnnamedAdventureGame PUBLIC LeapEngine ${GLFW_LIBRARY_DIR})
+
 # Copies used for .exe
 add_custom_command(TARGET UnnamedAdventureGame PRE_LINK
     COMMAND ${CMAKE_COMMAND} -E copy_if_different ${FMOD_DLL_DIR} $<TARGET_FILE_DIR:UnnamedAdventureGame>
