--- a/LeapEngine/CMakeLists.txt
+++ b/LeapEngine/CMakeLists.txt
@@ -45,3 +45,4 @@ add_library(LeapEngine STATIC
     "Components/Audio/AudioListener.cpp")
 
 set(LeapEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
+message("Include dir: ${LeapEngineIncludeDir}")
