--- a/Networking/CMakeLists.txt
+++ b/Networking/CMakeLists.txt
@@ -1,4 +1,9 @@
 #Networking engine cmake
-add_library(NetworkingEngine STATIC Client.h Client.cpp)
+add_library(NetworkingEngine STATIC
+Client.h
+Client.cpp)
+
+target_include_directories(NetworkingEngine PUBLIC ${EngineUtilsIncludeDir} EngineUtils)
 
 set(NetworkingEngineIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
+message("Include dir: ${NetworkingEngineIncludeDir}")
