--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -3,3 +3,5 @@
 add_library(EngineUtils "Debug.cpp")
 
 set(EngineUtilsIncludeDir "${CMAKE_CURRENT_SOURCE_DIR}" PARENT_SCOPE)
+
+message("Include dir: ${EngineUtilsIncludeDir}")
